🔨: add register confirm email and smtp

--- a/app/email-templates/test_email.html
+++ b/app/email-templates/test_email.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div>
+    <h3>Hello, {{ email }}</h3>
+    <p>this is a test email send to you</p>
+    <p>---soulapi admin</p>
+</div>
