--- a/app/email-templates/verify_user.html
+++ b/app/email-templates/verify_user.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div>
+    <h3>Hello, {{ email }}</h3>
+    <p>this is a verify email send to you,</p>
+    <p>Please click this link to confirm: <a href="{{ link }}">{{ link }}</a></p>
+    <p>---soulapi admin</p>
+</div>
